DOCKER-3 : Refactoring + cleanup and bunch of new features